# Final-IMT-342

./: .gitignore  AGENT.md  AGENT_STATE.md  AGENT_WORKPLAN_NIVEL2.md  CHANGELOG.md  CODEX.md  DEEPSEEK.md  GEMINI.md  PROJECT.md  PROJECT_BASELINE.md  PROJECT_STATE.md  REPORTE_ESTADO_FASES.md  REPO_MAP.md  SKILLS.md  VALIDATION_PLAN.md  detect_aruco.py  frames_2026-06-30_23.54.27.gv  frames_2026-06-30_23.58.09.gv  run_warehouse.sh  skills-lock.json  spin_and_detect.py  test.urdf
.agents/skills/multiagent-workflow/: SKILL.md
database/: inventory.db  schema.sql
docs/adr/: ADR-005-ros2-jazzy-gazebo-sim.md  ADR-006-official-robot-description.md  ADR-007-documentation-restructure.md  ADR-008-get-product-status-level2-contract.md
docs/agents/: AGENT_ITERATION_REPORT_TEMPLATE.md  AGENT_PROGRESS_PROTOCOL.md
docs/agents/progress/: PLATAFORMA_A.md  PLATAFORMA_B.md  PLATAFORMA_C.md
docs/archive/: ANTIGRAVITY_REPO_AUDIT_2026-06-26.md  AUDIT_DIRECTOR_INITIAL_REVIEW_2026-07-01.md  LEVEL2_SOFTWARE_VALIDATION_2026-06-30.md  README_ARCHIVE.md
docs/audit/: AUDIT_CURRENT_STATUS.md  AUDIT_SUMMARY_2026-06-26.md  CODEX_REPO_AUDIT_2026-06-26.md
docs/director/: DIRECTOR_OPERATING_BASELINE.md  MULTIAGENT_ARCHITECTURE.md  PROJECT_OBJECTIVE_BASELINE.md  TECHNICAL_REQUIREMENTS_AND_METRICS.md
docs/tasks/: README.md  TASKS_A.md  TASKS_B.md  TASKS_C.md  TASKS_DIRECTOR.md
docs/workflow/: SKILL_MATRIX.md  TEMPLATE_REPORT.md  WORKFLOW.md
install/: local_setup.sh  setup.sh
install/warehouse_moveit_config/share/warehouse_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/warehouse_moveit_config/share/warehouse_moveit_config/cmake/: warehouse_moveit_configConfig-version.cmake  warehouse_moveit_configConfig.cmake
install/warehouse_moveit_config/share/warehouse_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  warehouse_robot.srdf
install/warehouse_moveit_config/share/warehouse_moveit_config/environment/: ament_prefix_path.dsv  path.dsv
install/warehouse_moveit_config/share/warehouse_moveit_config/launch/: move_group.launch.py
install/warehouse_task_manager/share/warehouse_task_manager/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/warehouse_task_manager/share/warehouse_task_manager/cmake/: warehouse_task_managerConfig-version.cmake  warehouse_task_managerConfig.cmake
install/warehouse_task_manager/share/warehouse_task_manager/environment/: ament_prefix_path.dsv  path.dsv
install/warehouse_task_manager/share/warehouse_task_manager/launch/: level2_integration.launch.py  mission_mock.launch.py  operator_console.launch.py  storage_mission_nav2.launch.py  task_manager_fsm.launch.py
log/: latest_build  latest_list  latest_test  latest_test-result
scripts/: diagnose_nav2_lifecycle.sh  sprint_validator.sh  test_pick.py
src/robot_amr_description/: CMakeLists.txt
src/robot_amr_description/launch/: display.launch.py
src/robot_amr_description/scripts/: read_camera.py
src/robot_amr_description/urdf/: gazebo.xacro  robot.urdf.xacro  robot_amr_manipulator.urdf.xacro  ros2_control.xacro  sensors.xacro
src/warehouse_bringup/: CMakeLists.txt  package.xml
src/warehouse_bringup/config/: controllers.yaml  ekf.yaml
src/warehouse_bringup/scripts/: twist_to_twist_stamped.py
src/warehouse_dashboard/: README.md
src/warehouse_dashboard/web/: index.html
src/warehouse_gazebo/: CMakeLists.txt  package.xml
src/warehouse_gazebo/launch/: warehouse.launch.py
src/warehouse_gazebo/models/conveyor_belt/: model.config  model.sdf
src/warehouse_gazebo/models/landmark_tags/: model.config  model.sdf
src/warehouse_gazebo/models/product_box/: model.config  model.sdf
src/warehouse_gazebo/models/shelf/: model.config  model.sdf
src/warehouse_gazebo/scripts/: conveyor_spawner.py
src/warehouse_gazebo/worlds/: warehouse_level2.world
src/warehouse_interfaces/: CMakeLists.txt  package.xml
src/warehouse_interfaces/msg/: CalibrationStatus.msg  LandmarkDetection.msg  StorageLocation.msg
src/warehouse_interfaces/srv/: AssignStorageLocation.srv  DashboardCommand.srv  DeleteProduct.srv  GetLandmarkPose.srv  UpdateInventory.srv
src/warehouse_inventory/: CMakeLists.txt  package.xml
src/warehouse_inventory/src/: inventory_manager.cpp  inventory_store.cpp
src/warehouse_inventory/test/: test_inventory_store.cpp
src/warehouse_manipulation/: CMakeLists.txt  package.xml
src/warehouse_manipulation/launch/: pick_product_server.launch.py  place_product_server.launch.py
src/warehouse_manipulation/src/: demo_pick_place.cpp  pick_product_server.cpp  place_product_server.cpp
src/warehouse_moveit_config/: CMakeLists.txt  package.xml
src/warehouse_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  warehouse_robot.srdf
src/warehouse_moveit_config/launch/: move_group.launch.py
src/warehouse_navigation/: CMakeLists.txt  README.md  package.xml
src/warehouse_navigation/config/: nav2_params.yaml
src/warehouse_perception/: CMakeLists.txt  package.xml
src/warehouse_perception/config/: landmarks.yaml
src/warehouse_perception/launch/: camera_aruco.launch.py  landmark_apriltag.launch.py  perception_mock.launch.py
src/warehouse_perception/src/: apriltag_detector.py  apriltag_detector_mock.cpp  aruco_detector.cpp  landmark_manager.py  yolo_detector_mock.cpp
src/warehouse_robot_description/: CMakeLists.txt
src/warehouse_task_manager/: CMakeLists.txt  package.xml
src/warehouse_task_manager/config/: calibration_waypoints.yaml
src/warehouse_task_manager/launch/: level2_integration.launch.py  mission_mock.launch.py  operator_console.launch.py  storage_mission_nav2.launch.py  task_manager_fsm.launch.py
src/warehouse_task_manager/scripts/: dashboard_orchestrator.py
src/warehouse_task_manager/src/: startup_calibration_manager.py  task_manager_fsm.cpp
(+447 files in other folders)
