<?xml version="1.0"?>
<package format="3">
  <name>warehouse_bringup</name>
  <version>0.1.0</version>
  <description>Bringup meta-package (skeleton)</description>
  <maintainer email="dev@example.com">Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
