<?xml version="1.0"?>
<package format="3">
  <name>warehouse_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo world and launch files (skeleton)</description>
  <maintainer email="dev@example.com">Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>warehouse_bringup</exec_depend>
  <exec_depend>warehouse_robot_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
