<?xml version="1.0"?>
<package format="3">
  <name>warehouse_inventory</name>
  <version>0.1.0</version>
  <description>Inventory management package (skeleton)</description>
  <maintainer email="dev@example.com">Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>warehouse_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>sqlite3</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
