<?xml version="1.0"?>
<package format="3">
  <name>warehouse_manipulation</name>
  <version>0.1.0</version>
  <description>Manipulation stack skeleton</description>
  <maintainer email="dev@example.com">Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf2</depend>
  <depend>warehouse_interfaces</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
