<?xml version="1.0"?>
<package format="3">
  <name>warehouse_perception</name>
  <version>0.1.0</version>
  <description>Perception components (skeleton)</description>
  <maintainer email="dev@example.com">Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>OpenCV</depend>
  <exec_depend>python3-yaml</exec_depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>warehouse_interfaces</depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
