<?xml version="1.0"?>
<package format="3">
  <name>warehouse_task_manager</name>
  <version>0.1.0</version>
  <description>Task manager (skeleton)</description>
  <maintainer email="dev@example.com">Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>warehouse_inventory</depend>
  <depend>warehouse_interfaces</depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
