<?xml version="1.0"?>
<package format="3">
  <name>warehouse_task_manager</name>
  <version>0.1.0</version>
  <description>Task manager (skeleton)</description>
  <maintainer email="dev@example.com">Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>lifecycle_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <exec_depend>python3-yaml</exec_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rclcpp_action</depend>
  <depend>warehouse_inventory</depend>
  <depend>warehouse_interfaces</depend>
  <exec_depend>warehouse_gazebo</exec_depend>
  <exec_depend>warehouse_manipulation</exec_depend>
  <exec_depend>warehouse_moveit_config</exec_depend>
  <exec_depend>warehouse_navigation</exec_depend>
  <exec_depend>warehouse_perception</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
