<?xml version="1.0"?>
<package format="3">
  <name>warehouse_task_manager</name>
  <version>0.1.0</version>
  <description>Task manager (skeleton)</description>
  <maintainer email="dev@example.com">Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclcpp</exec_depend>

</package>
